# dia_ws

./: .gitignore  .gitmodules  README.md  ski_testing3.csv
src/custom_controller/custom_controller_interfaces/: CMakeLists.txt  package.xml
src/custom_controller/custom_controller_interfaces/msg/: ArduinoMotor.msg  LCMsg.msg  LogMsg.msg
src/custom_controller/custom_controller_interfaces/srv/: VectorPredictionFK.srv  VectorPredictionFKTwo.srv  VectorPredictionLC.srv
src/custom_controller/pos_controller/: CMakeLists.txt  package.xml
src/custom_controller/pos_controller/launch/: launch_novint.launch.py  launch_user_test.py  launch_whiteboard_bounding_test.launch.py  novint.launch.py  pre_programmed_recording.launch.py
src/custom_controller/pos_controller/scripts/: fk_vector_predict.py  lc_vector_predict.py  serial_node.py  ski_fk.py  ski_fk_two.py
src/custom_controller/pos_controller/src/: 0testing.cpp  PerturbMotion.cpp  PerturbMotion.hpp  arduino_angle_listener.cpp  box_pos_controller.cpp  camera_tracking_node.cpp  compliant_loadcell.cpp  coordinates.txt  delay_whiteboard_messages.cpp  draw_png.cpp  experiment_pose_seq.cpp  generate_whiteboard_angles.cpp  impulse_testing.cpp  keyboard.cpp  load_cell_node.py  moment_testing.cpp  moveit_test.cpp  moveit_test2.cpp  new_novint.cpp  novint_falcon_test.cpp  operator_domain_manip.cpp  perturbTest.cpp  pre_programmed_path.cpp  publisher_temp.cpp  refactor_novint.cpp  spinning.cpp  temp.cpp  test_controller_jog.cpp  udp_whiteboard_communicator.cpp  websocket_arduino.cpp
src/custom_controller/pos_controller/src/util/: coordinate_conversions.hpp
src/custom_controller/pos_controller/src/util/kinematics_platform/: Kinematics.hpp
src/custom_controller/pos_controller/src/util/perturb/: PerturbMotion.cpp  PerturbMotion.hpp
src/custom_controller/pos_controller/src/util/wifi_communicator/: WifiCommunicator.hpp
src/custom_controller/pos_controller/tests/: tests_perturb.cpp
src/experiment_nodes/: CMakeLists.txt  package.xml
src/experiment_nodes/launch/: launch_recorder.launch.py  launch_recorder.py
src/experiment_nodes/src/: camera_interface.cpp  imu_interface.cpp
src/experiment_nodes/src/configurations/: configurations.json
src/experiment_nodes/src/nodes/: CameraRecorderNode.cpp  CameraRecorderNode.hpp  ImuRecorderNode.cpp  ImuRecorderNode.hpp
src/experiment_nodes/src/util/: WifiCommunicator.hpp  configurator.hpp  structs.hpp
src/network/: CMakeLists.txt  package.xml
src/network/src/: receiver.cpp  sender.cpp
src/network/src/core/: ReceiverNode.cpp  ReceiverNode.h  SenderNode.cpp  SenderNode.h
